<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PARLES+SIGNES</string>

    <string name="descripcion_app">Una aplicación diseñada para facilitar la comunicación inclusiva entre personas oyentes y personas sordas o con dificultades del habla.</string>
    <string name="parrafo_bienvenida">A una herramienta que te ayudará a comunicarte con los no oyente</string>
    <string name="inicio_sesion_registro">Iniciar Sesión</string>
    <string name="Error_traductor">El reconocimiento de voz no está disponible.</string>

    <string name="boton_iniciar">Iniciar</string>
    <string name="btn_nosotros">Sobre nosotros</string>
    <string name="btn_lecciones">Lecciones</string>
    <string name="btn_text_check">Check</string>

    <string name="txt_seccion_frase">Type Something</string>
    <string name="txt_bienvenido">Bienvenido</string>
    <string name="txt_nosotros">Aprende de una manera divertida y fácil el lenguaje de señas</string>
    <string name="txt_secciones">Secciones</string>
    <string name="txt_material">Material de apoyo</string>
    <string name="txt_categorias">Categorias</string>
    <string name="txt_niveles">Niveles</string>
    <string name="txt_traductor">Traductor</string>
    <string name="txt_contrasena">Contraseña:</string>
    <string name="txt_nombre">Nombre:</string>
    <string name="txt_correo">Correo:</string>
    <string name="txt_videos">Videos</string>
    <string name="txt_documentos">Documentos</string>
    <string name="txt_abecedario">Abecedario</string>
    <string name="txt_nivel_1">Nivel- 1</string>
    <string name="txt_nivel_2">Nivel-2</string>
    <string name="txt_nivel_3">Nivel-3</string>
    <string name="txt_nivel_4">Nivel-4</string>
    <string name="txt_nivel_5">Nivel-5</string>
    <string name="txt_description_level">Sección donde podrás aprender por medio de niveles</string>
    <string name="txt_monstruo_level">Monstruo</string>
    <string name="txt_level_cerrar">Cerrar</string>
    <string name="txt_level_excelente_lo_lograste">Excelente lo lograste</string>
    <string name="txt_level_has_completado_todos_los_niveles">Has completado todos los niveles</string>
    <string name="txt_level_felicidades">Felicidades sigue practicando más!</string>
    <string name="txt_level_continuar">Continuar</string>
    <string name="txt_level_puedes_pasar_al_siguiente_nivel">Puedes pasar al siguiente nivel !</string>
    <string name="txt_level_imagen_de_contenido">Imagen de contenido</string>
    <string name="txt_level_nivel_desbloqueado">Nivel desbloqueado</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_traductor">Traductor</string>
    <string name="menu_material">Material</string>
    <string name="menu_inicio">Inicio</string>

    <string name="video_txt_titulo3">LENGUA DE SEÑAS</string>
    <string name="video_txt_titulo1">Abecedario en Señas</string>
    <string name="video_txt_titulo4">Comunicación básica en Lengua de Señas (LESCO)</string>
    <string name="video_txt_titulo5">French Sign Language "LSF" Basic Signs</string>
    <string name="video_txt_description3">Lengua de signos americano ASL para principiantes</string>
    <string name="video_txt_description2">LSM Saludos y despedidas.</string>
    <string name="video_txt_description1">Aprende el lenguaje de señas, con este sencillo video.</string>
    <string name="video_txt_description4">Vocabulario básico de Cortesía en Lengua de Señas Costarricense</string>
    <string name="video_txt_description5">Join us for French in February! All month long we\'ll be brushing up on our French vocabulary through sign language [LSF]!</string>

    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse_txt">Registrarse</string>

    <string name="bienvenido_a_tu_perfil">Bienvenido a tu perfil</string>
    <string name="nombre_perfil">Nombre:</string>
    <string name="nombre_del_usuario_txt">Nombre del usuario</string>
    <string name="correo_perfil">Correo:</string>
    <string name="correo_del_usuario_txt">Correo del usuario</string>
    <string name="niveles_completados_txt">Niveles completados</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bot_n_para_cerrar_sesi_n">Botón para cerrar sesión</string>

    <string name="candado_indicando_progreso_txt">Candado indicando progreso</string>
    <string name="contenedor_de_informaci_n_de_perfil_des">Contenedor de información de perfil</string>
    <string name="imagen_de_perfil_des">Imagen de perfil</string>
    <string name="n_meros">Números</string>
    <string name="puntos_txt">......</string>

    <string name="registrate_login">Registrate</string>
    <string name="iniciar_sesi_n_login">Iniciar Sesión</string>
    <string name="correo_electr_nico_login">Correo electrónico</string>
    <string name="contrase_a_login">Contraseña:</string>
    <string name="correo_login">Correo:</string>

    <string name="abecedario_txt">Abecedario</string>
    <string name="lista_de_letras_del_abeced">Lista de letras del abecedario</string>
    <string name="retroceder_abece">Retroceder</string>
    <string name="numeros_mostrados_num">numeros mostrados</string>
    <string name="animales_titulo">Animales</string>
    <string name="lista_de_animales_ani">Lista de animales</string>
    <string name="hola_categ">Hola!</string>
    <string name="sigue_aprendiendo_cate">Sigue aprendiendo</string>
    <string name="bienvenido_a_la_secci_n_de_categorias">Bienvenido a la sección de categorias</string>
    <string name="abecedario_categ">Abecedario</string>
    <string name="saludos">Meses</string>
    <string name="n_meros_categ">Números</string>
    <string name="animales_categ">Animales</string>
    <string name="scrolltraductor_text">scrollTraductor</string>
    <string name="confirmar_te">Confirmar</string>
    <string name="escribe_algo_te">Escribe Algo:</string>
    <string name="aqu_tu_texto_te">Aquí tu texto</string>


    <string name="rea_de_documentos_docu">Área de Documentos</string>
    <string name="documentos_docu">Documentos</string>
    <string name="did_ctica_de_la_lengua_de_se_as_argentina_docu">DIDÁCTICA DE LA LENGUA DE SEÑAS ARGENTINA</string>
    <string name="documento_de_aprendizaje_argentino_docu">Documento de aprendizaje argentino</string>
    <string name="ver_pdf_docu">Ver PDF</string>

    <string name="diccionario_b_sico_de_la_lengua_de_se_as_colombiana">DICCIONARIO BÁSICO DE LA LENGUA DE SEÑAS COLOMBIANA</string>
    <string name="diccionario_en_el_que_colombia">Diccionario en el que podras informarte mucho más sobre el lenguaje de señas en Colombia</string>
    <string name="diccionario_de_lenguaje_de_se_as_mexicano">DICCIONARIO DE LENGUAJE DE SEÑAS MEXICANO</string>
    <string name="diccionario_mexicano_lsm_para_aprendiza">Diccionario mexicano LSM para aprendizaje y lectura</string>
    <string name="lenguaje_de_se_as_chile">LENGUAJE DE SEÑAS CHILE</string>
    <string name="diccionario_biling_e_lenguaje_de_se_as_chilena">Diccionario bilingüe - Lenguaje de Señas Chilena</string>
    <string name="retrocederr_meses">Retrocederr</string>
    <string name="meses_del_a_o_mes">Meses del año</string>
    <string name="lista_de_meses_mes">Lista de meses</string>
    <string name="derechos_reservador">© 2025 Parles+Signes. Todos los derechos reservados.</string>
    <string name="texto_derechos" tools:ignore="Typos">Nuestra aplicación utiliza imágenes, docuementos y videos obtenidos de fuentes externas. Los derechos de autor pertenecen a sus respectivos creadores. Si alguna imagen infringe derechos, contáctanos para su revisión.</string>
    <string name="texto_uno_derechos">Un proyecto comprometido con la inclusión, accesibilidad y equidad comunicativa. Nuestro objetivo principal es acercar la lengua de señas a todos, promoviendo el aprendizaje y el respeto por la diversidad lingüística de las personas sordas.</string>
    <string name="rana">Rana</string>
    <string name="p_jaro">Pájaro</string>
    <string name="le_n">León</string>
    <string name="lobo">Lobo</string>
    <string name="oso">Oso</string>
    <string name="gato_te">Gato</string>
    <string name="b_ho_">Búho</string>
    <string name="burro_t">Burro</string>
    <string name="caballo_t">Caballo</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="mensaje_registro">La contraseña debe tener al menos 6 caracteres</string>
    <string name="correo_v_registro">Por favor, ingrese un correo válido</string>
    <string name="complete_registro">Por favor, complete todos los campos</string>
    <string name="usuario_registrado_correctamente">Usuario registrado correctamente</string>
    <string name="por_favor_complete_todos_los_campos">Por favor, complete todos los campos</string>
    <string name="inicio_de_sesi_n_exitoso">Inicio de sesión exitoso</string>
    <string name="usuario_o_contrase_a_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="inicio_me">Inicio</string>
    <string name="traductor_voz_me">Traductor Voz</string>
    <string name="traductor_escrito_me">Traductor Escrito</string>
    <string name="no_hay_frases_para_este_nivel">No hay frases para este nivel.</string>
    <string name="selecciona_la_opci_n_correcta">Selecciona la opción correcta</string>
    <string name="selecciona_una_opci_n">Selecciona una opción</string>
    <string name="has_fallado">Has fallado 2 veces. Fin del intento.</string>
    <string name="incorrecto_">Incorrecto. Intenta de nuevo</string>
    <string name="nivel_completado">¡Nivel completado!</string>
    <string name="vuelve_a_intentar">Vuelve a intentar el nivel 1 .</string>
    <string name="rat_n">Ratón</string>
    <string name="correcto">¡Correcto!</string>


</resources>