<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/casa"
        android:title="@string/menu_inicio"
        android:onClick="vistaInicio"/>
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/libro"
        android:title="@string/menu_material"
        android:onClick="vistaMaterial"/>
    <item
        android:id="@+id/nav_voice"
        android:icon="@drawable/micro"
        android:title="@string/menu_traductor"
        android:onClick="vistaTraductor"/>
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/usuario"
        android:title="@string/menu_perfil"
        android:onClick="vistaUsuario"
        />
</menu>