<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/fondo_perfil"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="332dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:importantForAccessibility="yes"
        android:labelFor="@+id/textView4"
        android:text="@string/bienvenido_a_tu_perfil"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresent,TextSizeCheck" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:text="@string/nombre_perfil"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:importantForAutofill="no"
        android:text="@string/correo_perfil"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/textView9"
        app:layout_constraintTop_toBottomOf="@id/textView9" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/nombre_del_usuario_txt"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#160303"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/textView9"
        app:layout_constraintTop_toTopOf="@id/textView9"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="246dp"
        android:layout_height="57dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/correo_del_usuario_txt"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#160303"
        app:layout_constraintStart_toEndOf="@id/textView10"
        app:layout_constraintTop_toTopOf="@id/textView10"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#563ec8"
        android:contentDescription="@string/bot_n_para_cerrar_sesi_n"
        android:onClick="cerrarsesion"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationPerfil2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#563ec8"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="labeled"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>
