<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_parles3"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/contra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/puntos_txt"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="317dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-120dp"
        android:contentDescription="@string/iniciar_sesi_n_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vista2" />


    <Button
        android:id="@+id/startButton2"
        android:layout_width="244dp"
        android:layout_height="98dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="-125dp"
        android:backgroundTint="@color/white"
        android:drawablePadding="30dp"
        android:onClick="Registrarse"
        android:paddingHorizontal="60dp"
        android:text="@string/registrate_login"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:backgroundTint="#4A4ACB"
        android:drawablePadding="30dp"
        android:importantForAutofill="no"
        android:onClick="Inicio"
        android:paddingHorizontal="60dp"
        android:text="@string/iniciar_sesi_n_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/correo_electr_nico_login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:text="@string/contrase_a_login"
        app:layout_constraintBottom_toTopOf="@id/contra"
        app:layout_constraintStart_toStartOf="@id/contra" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:text="@string/correo_login"
        app:layout_constraintBottom_toTopOf="@id/correo"
        app:layout_constraintStart_toStartOf="@id/correo" />


</androidx.constraintlayout.widget.ConstraintLayout>
